--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -135,6 +135,15 @@ p {
 }
 
 @media screen and (min-width: 768px) {
+  .links a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+    font-size: 25px;
+  }
   h1 {
     font-size: 4rem;
   }
