--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -17,6 +17,7 @@ nav.navbar {
   background-color: #333;
   display: inline-flex;
   justify-content: space-between;
+  height: 6.5vh;
 }
 
 .links a {
@@ -24,9 +25,9 @@ nav.navbar {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px;
+  padding: 1.4rem;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 1.4rem;
 }
 
 .links a:hover {
@@ -54,6 +55,16 @@ nav.navbar {
   margin: 2rem auto;
 }
 h1 {
+  /* hide the H1 until new title */
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+
   font-size: 1.8rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -130,19 +141,19 @@ p {
   height: 15px;
   margin-right: 0.2rem;
 }
-.visibility {
-  visibility: hidden;
-}
 
 @media screen and (min-width: 768px) {
+  nav.navbar {
+    height: 6.5vh;
+  }
   .links a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
     font-size: 25px;
+  }
+  .topPage {
+    height: 93.5vh;
+  }
+  #logo {
+    margin: 7% auto;
   }
   h1 {
     font-size: 4rem;
@@ -169,9 +180,6 @@ p {
   .text.container {
     width: 80%;
     margin: 0.5rem auto;
-  }
-  .visibility {
-    visibility: visible;
   }
   .contact-logo {
     width: 50px;
