--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -135,11 +135,12 @@ p {
 .contact-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  font-size: 1.2rem;
 }
 .contact-logo {
-  width: 15px;
-  height: 15px;
-  margin-right: 0.2rem;
+  width: 25px;
+  height: 25px;
+  margin-right: 0.5rem;
 }
 .contact-list a {
   margin: 1rem;
@@ -187,7 +188,6 @@ p {
   .contact-logo {
     width: 50px;
     height: 50px;
-    margin-right: 0.2rem;
   }
   .contact a {
     font-size: 1.6rem;
