--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -81,6 +81,7 @@ h1 {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
 }
 .text.container {
