--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,7 +73,6 @@ h1 {
 .photo.container {
   margin: 0.5rem;
   display: flex;
-  flex-direction: row;
   justify-content: center;
 }
 .photo.me {
@@ -81,7 +80,7 @@ h1 {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
 }
 .text.container {
