--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,7 +73,8 @@ h1 {
 .photo.container {
   margin: 0.5rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .photo.me {
   width: 60%;
