--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -137,13 +137,13 @@ p {
 }
 
 .contact-list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  justify-content: space-between;
   font-size: 1.2rem;
 }
 .contact-logo {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   margin-right: 0.2rem;
 }
 .contact-list a {
